<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name" />

    <LinearLayout
        android:id="@+id/Btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/DialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="openActivity"
            android:text="@string/Dialog" />

        <Button
            android:id="@+id/ExitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ok_cancel_click"
            android:text="@string/Exit" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstCheck" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondCheck" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDialogActivity"
        android:text="@string/DialogFive" />
</LinearLayout>