<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecActivity">

    <EditText
        android:id="@+id/DialogTextas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hellows" />

    <LinearLayout
        android:id="@+id/DialogBtnsas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/OkBtnas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ok_activity_click"
            android:text="@string/Okey" />

        <Button
            android:id="@+id/CloseBtnas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel_activity_click"
            android:text="@string/Closing" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch1as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstCheck" />

    <Switch
        android:id="@+id/switch2as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondCheck" />
</LinearLayout>